Generacion de reportes (#34)
* testing improved

* Escenarios agregados

* reports includes employee worked hours

* report fixed

* Included route for report by project (#33)


* report added

* new things

* new things

* added

* Swagger updated

* code updated

* new things

* more things
